--- a/3pokemongo/index.html
+++ b/3pokemongo/index.html
@@ -2,7 +2,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MSE47Y5QPM"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-MSE47Y5QPM');
+	</script>
 	<title>[FREE] Pokemon Go diamonds generator | Coin Generator & Game Hack</title>
     <meta name="description" content="Pokemon Go Mod diamonds generator allow you to Collect hundreds of powerful fighters with unique features from ten factions.">   
     <meta property="keywords" content="Pokemon Go mod, pokemon go pokemon go pokémon go pokémon go pokémon go pokémon go, ">
