--- a/4royalmatch/index.html
+++ b/4royalmatch/index.html
@@ -3,6 +3,15 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EJVCTZTG75"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-EJVCTZTG75');
+    </script>
     <title>[100% FREE] Royal Match - Hearts and Coins Generator</title>
     <meta name="description" content="Discover and play exciting puzzle games similar to Royal Match, both online and through apps. Enjoy Royal Match and similar games for free, including downloads and online versions.">
     <meta property="keywords" content="royal match, games like royal match, royal match online free, royal match app, royal match online, game royal match, royal match free download, royal match game download">
