--- a/10rocketleague/index.html
+++ b/10rocketleague/index.html
@@ -2,6 +2,15 @@
 <html lang="en" class="h-100">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EDR40Q2527"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-EDR40Q2527');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[100% REAL] Rocket League Hack | Coins Generator</title>
