--- a/11apexlegends/index.html
+++ b/11apexlegends/index.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 
 <html><head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LBQQ6LLTHY"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-LBQQ6LLTHY');
+	</script>
     <title>[100% FREE] APEX LEGENDS COINS GENERATOR NEW 2024</title>
     <meta name="description" content="APEX LEGENDS COINS GENERATOR NEW 2024 "/>
     <meta property="og:title" content="APEX LEGENDS COINS GENERATOR NEW 2024 "/>
