--- a/12amongus/index.html
+++ b/12amongus/index.html
@@ -10,6 +10,15 @@ Created by CPAZip.com- Free Landing Pages and CPA Methods
 <!doctype html>
 <html lang="en">
    <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6H4FH6L1YX"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-6H4FH6L1YX');
+	</script>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
