--- a/14township/index.html
+++ b/14township/index.html
@@ -2,6 +2,15 @@
 <html lang="en" class="h-100">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MCD6L2807M"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-MCD6L2807M');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[100% FREE] Township Hack | Coin Generator & Game Hack</title>
