--- a/21starwarsIndividual/index.html
+++ b/21starwarsIndividual/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-F02RHVJ7X2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-F02RHVJ7X2');
+	</script>
     <title>[100% FREE] Star Wars Hack Cheats Online Tool - Free Cartel Coins and Free Avatars</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
