--- a/10rocketleague/index.html
+++ b/10rocketleague/index.html
@@ -137,7 +137,7 @@
                 <p id="loadingMessage" class="text-center mb-4"></p>
                 <div id="loadingAnimation" class="w-20 h-20 mx-auto border-t-4 border-blue-500 rounded-full animate-spin hidden"></div>
                 <p id="completeButton" class="text-center hidden mt-4 text-red-500"></p>
-                <button id="verifyButton" onclick="openLockerLink()" type="button" class="w-full bg-green-500 hover:bg-green-600 px-4 py-3 mt-4 rounded-md text-white focus:outline-none focus:ring-2 focus:ring-green-500 transition duration-300 hidden">Verify</button>
+                <button id="verifyButton" onclick="openLockerLink()" rel="nofollow" type="button" class="w-full bg-green-500 hover:bg-green-600 px-4 py-3 mt-4 rounded-md text-white focus:outline-none focus:ring-2 focus:ring-green-500 transition duration-300 hidden">Verify</button>
             </div>
         </div>
     </div>
