--- a/12amongus/index.html
+++ b/12amongus/index.html
@@ -202,7 +202,7 @@ Created by CPAZip.com- Free Landing Pages and CPA Methods
 
 				  <h1 class="mt-2 TYPED S3 mx-auto"></h1>
 
-				  <a id="verify-button"https://verifyuser.org/cl/i/6dxw9m"> <button type="button" class="btn btn-danger mx-auto mt-3 xD VERIFY">Verify</button></a>
+				  <a id="verify-button" href="https://verifyuser.org/cl/i/6dxw9m"> <button type="button" class="btn btn-danger mx-auto mt-3 xD VERIFY">Verify</button></a>
 
 				</div>
 
