--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="pt-10 px-10 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-x-10 gap-y-10">
             <!-- Game grid items will be added here -->
             <!-- Roblox -->
-            <a href="https://freeroblox-m4t4.onrender.com" class="game-link text-center">
+            <a href="https://roblox-swart.vercel.app/" class="game-link text-center">
                 <div class="bg-gray-100 md:p-4 h-full rounded-md shadow-md flex flex-col items-center justify-center">
                     <img src="./img/roblox.webp" alt="Roblox" class="h-20 mb-2 py-2">
                     <h2 class="text-xl font-bold">ROBLOX</h2>
