--- a/21starwarsIndividual/index.html
+++ b/21starwarsIndividual/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, nofollow">
     <!-- SEO OPTIMISATION -->
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Welcome to the Star Wars  Hack Cheats  or Star Wars  Hack Cheats hack tool site. Click the button to claim your Coins !">
