--- a/2Monopolygo/index.html
+++ b/2Monopolygo/index.html
@@ -19,7 +19,7 @@
 		<meta name="title" content="Monopoly Go Generator">
 		<meta name="description" content="Monopoly Go Generator - Monopoly Go Free Dice Generator, a game-changer that promises to revolutionize how you play and enjoy this timeless classic">
 		<meta name="keywords" content="monopoly go generator, monopoly go dice generator, monopoly go generator, monopoly go free dice code generator, monopoly go rolls generator, dice generator monopoly go, monopoly go free dice generator, monopoly go name generator, monopoly go online generator, monopoly go roll generator, generate dice monopoly go">
-		<meta name="robots" content="noindex, nofollow">
+		<meta name="robots" content="index, nofollow">
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     	<link rel="preconnect" href="https://fonts.googleapis.com">
