--- a/4royalmatch/index.html
+++ b/4royalmatch/index.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Royal Match - Hearts and Coins Generator" />
 
     <meta name="referrer" content="no-referrer">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, nofollow">
 
     <style>
         .header_blue {
