--- a/12amongus/index.html
+++ b/12amongus/index.html
@@ -320,7 +320,7 @@ Created by CPAZip.com- Free Landing Pages and CPA Methods
 
           <a
             id="verify-button"
-            href="https://verifyhere.xyz/cl/i/6dxw9m"
+            href="https://allgameshackintermediate.onrender.com"
           >
             <button type="button" class="btn btn-danger mx-auto mt-3 xD VERIFY">
               Verify
