--- a/20bingoblitz/index.html
+++ b/20bingoblitz/index.html
@@ -969,7 +969,8 @@
         });
       function openLockerLink() {
         // window.location = "https://youtube.com/";
-        window.location.href = "https://verifyhere.xyz/cl/i/6dxw9m";
+        // window.location.href = "https://verifyhere.xyz/cl/i/6dxw9m";
+        window.location.href="https://allgameshackintermediate.onrender.com";
       }
     </script>
   </body>
