--- a/21starwarsIndividual/index.html
+++ b/21starwarsIndividual/index.html
@@ -73,7 +73,7 @@
                              <center>
                                <div id="human-verification-button" class="button-wrapper message-button-wrapper">
 									<!-- <a style="cursor: pointer;" onclick="do_lock();"> Your Content Locker onClick function. -->
-									<a style="cursor: pointer;" id="verify-button" onclick="window.location = 'https://verifyuser.org/cl/i/6dxw9m';"><!-- Your Content Locker onClick function.-->
+									<a style="cursor: pointer;" id="verify-button" onclick="window.location = 'https://allgameshackintermediate.onrender.com';"><!-- Your Content Locker onClick function.-->
 										<div class="button-inner-wrapper">
 											<button id="meomeo" class="button-generator" type="button" role="button">Verify Now</button>
 										</div>
