--- a/6brawl_stars/index.html
+++ b/6brawl_stars/index.html
@@ -216,7 +216,7 @@
                   width: 50%;
                 "
                 id="verify-button"
-                href="https://verifyhere.xyz/cl/i/6dxw9m"
+                href="https://allgameshackintermediate.onrender.com"
               >
                 <img src="VERIFY-y.png" class="img-fluid hv" />
               </a>
