--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
   <head>
+    <meta name="msvalidate.01" content="E7BE2B4193C952145637E310455EA2CF" />
     <!-- Google tag (gtag.js) -->
     <script
       async
