--- a/10rocketleague/index.html
+++ b/10rocketleague/index.html
@@ -36,7 +36,7 @@
       content="Get Rocket League for free and access free cars to enhance your gameplay. Download Rocket League for PC and enjoy playing this exciting game online."
     />
 
-    <meta name="robots" content="index, follow" />
+<!--     <meta name="robots" content="index, follow" /> -->
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
