--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!-- Game grid items will be added here -->
         <!-- Roblox -->
         <a
-          href="https://freeroblox-zv5x.onrender.com"
+          href="https://freerobux-zv5x.onrender.com"
           class="game-link text-center"
         >
           <div
