--- a/10rocketleague/index.html
+++ b/10rocketleague/index.html
@@ -21,12 +21,9 @@
     <title>[100% REAL] Rocket League Hack | Coins Generator</title>
     <meta
       name="description"
-      content="Download Rocket League for free and enjoy playing this game online. Get free Rocket League cars and experience the thrill of Rocket League gameplay on your PC."
+      content="Unlock free Rocket League credits easily with our generator. Get free RL credits and earn credits in Rocket League for the ultimate gaming experience. Start earning free credits on Rocket League now!"
     />
-    <meta
-      property="keywords"
-      content="rocket league free, free rocket league game, download rocket league for pc, rocket league game download, free rocket league car, free rocket league online, rocket free games, rocket league free car, download rocket league for pc free"
-    />
+
     <meta
       property="og:title"
       content="Free Rocket League Download and Online Gameplay"
