--- a/11apexlegends/index.html
+++ b/11apexlegends/index.html
@@ -11,6 +11,11 @@
 	
 	  gtag('config', 'G-LBQQ6LLTHY');
 	</script>
+	<meta
+	  name="description"
+	  content="Get 1000 free Apex Coins and unlock exclusive content with free Apex coin codes. Access free Apex Coins for PS4 and enjoy Apex Legends with free coins today!"
+	/>
+
     <title>[100% FREE] APEX LEGENDS COINS GENERATOR NEW 2024</title>
     <meta name="description" content="APEX LEGENDS COINS GENERATOR NEW 2024 "/>
     <meta property="og:title" content="APEX LEGENDS COINS GENERATOR NEW 2024 "/>
