--- a/15coinmaster/index.html
+++ b/15coinmaster/index.html
@@ -21,19 +21,16 @@
 
     <meta
       name="description"
-      content="Get free spins in Coin Master! Explore links for 1000 spins, 70 spins, 5000 spins, and more. Claim your daily free spins in Coin Master and enjoy the game to the fullest."
+      content="Unlock free Coin Master spins and boost your gameplay with daily free spins. Discover how to get free Coin Master spins and enjoy exciting rewards today!"
     />
-    <meta
-      property="keywords"
-      content="coin master free spins, free spins coin master, coin master spins, free coin master spins, 1000 spin link coin master, coin master free spins link, coin master free 70 spin link, 100 free spins coin master, coin master free 5000 spin link, coin master free spins link today new, free spins coin master 2023, free spins coin masters, coin master free"
-    />
+
     <meta
       property="og:title"
       content="Coin Master Free Spins - Claim Your Daily Rewards"
     />
     <meta
       property="og:description"
-      content="Discover how to get free spins in Coin Master with links for various spin amounts. Enjoy playing Coin Master with daily free spins to help you progress in the game!"
+      content="Unlock free Coin Master spins and boost your gameplay with daily free spins. Discover how to get free Coin Master spins and enjoy exciting rewards today!"
     />
 
     <meta name="robots" content="index, nofollow" />
