--- a/16dicedreams/index.html
+++ b/16dicedreams/index.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[100% FREE] Dice Dreams Hack | Coin Generator & Game Hack</title>
+    <title>[100% FREE] Dice Dreams Rolls | Free Coins & Rolls Generator</title>
     <meta name="robots" content="index, nofollow" />
     <meta
       property="og:title"
@@ -25,12 +25,13 @@
     />
     <meta
       property="og:description"
-      content="Use our Dice Dreams hack tool for free coins and unlock all features. Generate coins with our coin generator and dominate the game with our game hack."
+      content="Get Dice Dreams free rolls and enjoy more spins in 2024. Discover how to claim your free rolls for Dice Dreams on iOS and unlock exciting rewards. Maximize your gameplay with the latest free Dice Dreams rolls and spins today!" 
     />
-    <meta
-      name="description"
-      content="Dominate Dice Dreams with our free hack tool. Generate unlimited coins using our coin generator and enhance your gaming experience with our game hack."
+    <meta 
+      name="description" 
+      content="Get Dice Dreams free rolls and enjoy more spins in 2024. Discover how to claim your free rolls for Dice Dreams on iOS and unlock exciting rewards. Maximize your gameplay with the latest free Dice Dreams rolls and spins today!" 
     />
+
     <meta
       name="keywords"
       content="Dice Dreams, Hack, Coin Generator, Game Hack, 100% Free, Online"
