--- a/19whiteout/index.html
+++ b/19whiteout/index.html
@@ -19,10 +19,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[100% FREE] Whiteout Hack | Coin Generator & Game Hack</title>
 
-    <meta
-      name="description"
-      content="Explore the challenging survival game Whiteout Survival on Android. Download Whiteout Survival from Google Play and test your survival skills in extreme conditions."
+    <meta 
+      name="description" 
+      content="Unlock free lives and coins for Toon Blast! Discover the best methods to get free coins in Toon Blast, including using coin generators and other tips. Maximize your gameplay with free Toon Blast lives and coins today!" 
     />
+
     <meta
       property="keywords"
       content="whiteout survival, white out survival android, white out survival google play"
@@ -33,7 +34,7 @@
     />
     <meta
       property="og:description"
-      content="Embark on a survival adventure with Whiteout Survival on Android. Get the game from Google Play and experience the thrill of surviving in harsh environments."
+      content="Unlock free lives and coins for Toon Blast! Discover the best methods to get free coins in Toon Blast, including using coin generators and other tips. Maximize your gameplay with free Toon Blast lives and coins today!" 
     />
 
     <meta name="robots" content="index, nofollow" />
