--- a/20bingoblitz/index.html
+++ b/20bingoblitz/index.html
@@ -19,18 +19,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[100% FREE] Bingo Blitz Hack | Coin Generator & Game Hack</title>
 
-    <meta
-      name="description"
-      content="Get free credits for Bingo Blitz daily to enjoy unlimited coins and bonuses in the game. Claim your 100 free credits in Bingo Blitz today and explore more ways to earn free credits."
-    />
-    <meta
-      property="keywords"
-      content="bingo blitz free credits, free bingo credits for bingo blitz, bingo blitz credits for free, bingo blitz 100 free credits, bingo blitz free credits 2023, bingo blitz free credits daily, free bingo blitz credits today, unlimited bingo blitz credits, bingo blitz coins, bingo blitz bonus, bingo free credits"
+    <meta 
+      name="description" 
+      content="Get unlimited free Bingo Blitz credits and coins! Discover the best ways to earn free Bingo Blitz credits daily, including today's top freebies and tips for unlocking Bingo Blitz credits without spending a dime." 
     />
     <meta property="og:title" content="Get Free Credits for Bingo Blitz" />
     <meta
       property="og:description"
-      content="Discover how to get free credits for Bingo Blitz to enhance your gaming experience. Claim daily free credits, bonuses, and coins in Bingo Blitz to enjoy the game to the fullest."
+      content="Get unlimited free Bingo Blitz credits and coins! Discover the best ways to earn free Bingo Blitz credits daily, including today's top freebies and tips for unlocking Bingo Blitz credits without spending a dime." 
     />
 
     <meta name="robots" content="index, nofollow" />
