--- a/3pokemongo/index.html
+++ b/3pokemongo/index.html
@@ -12,8 +12,7 @@
 	  gtag('config', 'G-MSE47Y5QPM');
 	</script>
 	<title>[FREE] Pokemon Go diamonds generator | Coin Generator & Game Hack</title>
-    <meta name="description" content="Pokemon Go Mod diamonds generator allow you to Collect hundreds of powerful fighters with unique features from ten factions.">   
-    <meta property="keywords" content="Pokemon Go mod, pokemon go pokemon go pokémon go pokémon go pokémon go pokémon go, ">
+	<meta name="description" content="Discover legitimate ways to earn free Pokémon GO coins without spending money. Learn how to acquire Pokécoins through in-game activities, events, and special promotions. Avoid scams and get the most out of your Pokémon GO experience with our comprehensive guide.">
 	<meta property="og:title" content="Pokemon GO Generator "/>
 	<meta property="og:description" content="Pokemon GO - Generator "/>
 	
