--- a/5callofdutymw3/index.html
+++ b/5callofdutymw3/index.html
@@ -19,19 +19,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta
-      name="description"
-      content="Get free COD Points and enjoy rewards in Call of Duty and Warzone. Earn free CODM points for Call of Duty Mobile. Explore how to get free Call of Duty COD Points for Call of Duty and Warzone Mobile."
-    />
-    <meta
-      property="keywords"
-      content="cod points free, cod free cod points, free codm points, call of duty free cod points, call of duty points free, free call of duty cod points, call of duty, warzone, call of duty warzone mobile, warzone mobile, call of duty war zone mobile, cod 8, call of duty mobile"
-    />
+  <meta name="description" content="Explore legitimate methods to earn free COD Points in Call of Duty and Call of Duty Mobile. Discover ways to acquire COD Points through in-game events, promotions, and official offers. Stay safe and avoid fraudulent generators with our trusted guide.">
+
     <meta property="og:title" content="Free COD Points Rewards" />
     <meta
       property="og:description"
-      content="Unlock free COD Points and rewards for Call of Duty and Warzone across all platforms."
-    />
+content="Explore legitimate methods to earn free COD Points in Call of Duty and Call of Duty Mobile. Discover ways to acquire COD Points through in-game events, promotions, and official offers. Stay safe and avoid fraudulent generators with our trusted guide."    />
 
     <meta name="robots" content="index, nofollow" />
 
