--- a/7valorantlp/index.html
+++ b/7valorantlp/index.html
@@ -28,10 +28,10 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	    
-		<meta name="description" content="Download Valorant on PC and get free Valorant points and gift cards. Play Valorant online for free and redeem gift card codes for in-game rewards.">
+		<meta name="description" content="Find out how to legitimately earn free Valorant Points and gift cards for Valorant. Explore official promotions, events, and trusted methods for acquiring Valorant gift cards and codes without cost. Avoid scams and get the most value from your Valorant experience with our expert guide.">
 		<meta property="keywords" content="valorant download pc, free valorant points, valorant free, free valorant codes, free valorant, valorant online play, valorant gift card free, valorant free play, free valorant gift card, valorant gift card codes free, free valorant gift card codes, valorant points free, free download valorant">
 		<meta property="og:title" content="Free Valorant Downloads and Rewards"/>
-		<meta property="og:description" content="Explore Valorant on PC, earn free points, and discover how to get free gift cards for in-game benefits."/>
+		<meta property="og:description" content="Find out how to legitimately earn free Valorant Points and gift cards for Valorant. Explore official promotions, events, and trusted methods for acquiring Valorant gift cards and codes without cost. Avoid scams and get the most value from your Valorant experience with our expert guide."/>
 
 
     <meta name="robots" content="index, nofollow">
