--- a/9counterstrike/index.html
+++ b/9counterstrike/index.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[100% FREE] Counter Strike Hack | Coin Generator & Game Hack</title>
+    <title>[100% FREE] Counter Strike SKINS | Coin Generator & Game SKINS</title>
 
     <meta
       name="description"
