--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       name="keywords"
       content="Monopoly GO, Monopoly GO Generator, Pokemon GO, Pokemon GO pokecoins Generator 2024, Royal Match, Royal Match hack, Royal Match free coins Generator, Call of Duty, COD free points Generator, COD free points, Valorant, Valorant free coins, Valorant free points, League of Legends, LOL coins hack, LOL hack, Counter Strike, free CSGO skins, free Counter Strike Global Offensive skins, Rocket League, Rocket League credits, buy Rocket League credits, Apex Legends, Apex Legends free coins Generator, Apex Legends redeem code Generator, Among Us, Among Us free stars Generator, Among Us free coins Generator, Wordscapes, Wordscapes unlimited coins, Township, Township free coins, Coin Master, Coin Master free coins, Coin Master free spins hack, Dice Dreams, Dice Dreams free rolls, Dice Dreams free, Travel Town, free energy Generator, Toon Blast, Toon Blast coins, Toon Blast bases, Whiteout, Whiteout survival free coins, Bingo Blitz, Bingo Blitz free credits, Star Wars, free Star Wars coins Generator"
     />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <style>
       /* Define font family */
