--- a/10rocketleague/index.html
+++ b/10rocketleague/index.html
@@ -17,6 +17,8 @@
       gtag("config", "G-EDR40Q2527");
     </script>
     <meta charset="UTF-8" />
+        <meta name="robots" content="noindex, nofollow" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[100% REAL] Rocket League Hack | Coins Generator</title>
     <meta
