--- a/11apexlegends/index.html
+++ b/11apexlegends/index.html
@@ -25,7 +25,7 @@
     <meta name="referrer" content="no-referrer">
 
 
-    <meta name="robots" content="index, nofollow">
+    <meta name="robots" content="noindex, nofollow" />
 
 
 
