--- a/12amongus/index.html
+++ b/12amongus/index.html
@@ -30,7 +30,7 @@ Created by CPAZip.com- Free Landing Pages and CPA Methods
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>[100% FREE] Best Among Us Mod!</title>
     <meta
       name="description"
