--- a/13wordscapes/index.html
+++ b/13wordscapes/index.html
@@ -36,7 +36,7 @@
       content="Experience the joy of playing Wordscapes, a captivating word puzzle game, for free! Download Wordscapes to challenge yourself with word puzzles. Enjoy the free Wordscapes game and enhance your vocabulary skills."
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
