--- a/14township/index.html
+++ b/14township/index.html
@@ -36,7 +36,7 @@
       content="Discover Township, a captivating city-building and farming game. Play Township online for free or download the game for an immersive gaming experience. Dive into the world of Township by Playrix now!"
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
