--- a/15coinmaster/index.html
+++ b/15coinmaster/index.html
@@ -33,7 +33,7 @@
       content="Unlock free Coin Master spins and boost your gameplay with daily free spins. Discover how to get free Coin Master spins and enjoy exciting rewards today!"
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
