--- a/16dicedreams/index.html
+++ b/16dicedreams/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[100% FREE] Dice Dreams Rolls | Free Coins & Rolls Generator</title>
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta
       property="og:title"
       content="[100% FREE] Dice Dreams Hack | Coin Generator & Game Hack"
