--- a/17traveltown/index.html
+++ b/17traveltown/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[FREE] Travel Town Hack | Coin Generator & Game Hack</title>
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta
       property="og:title"
       content="[FREE] Travel Town Hack | Coin Generator & Game Hack"
