--- a/18toonblase/index.html
+++ b/18toonblase/index.html
@@ -36,7 +36,7 @@
       content="Play Toon Blast for free and dive into a world of colorful puzzles and challenges. Download the Toon Blast game to start your puzzle-solving adventure now!"
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
