--- a/19whiteout/index.html
+++ b/19whiteout/index.html
@@ -37,7 +37,7 @@
       content="Unlock free lives and coins for Toon Blast! Discover the best methods to get free coins in Toon Blast, including using coin generators and other tips. Maximize your gameplay with free Toon Blast lives and coins today!" 
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
