--- a/20bingoblitz/index.html
+++ b/20bingoblitz/index.html
@@ -29,7 +29,7 @@
       content="Get unlimited free Bingo Blitz credits and coins! Discover the best ways to earn free Bingo Blitz credits daily, including today's top freebies and tips for unlocking Bingo Blitz credits without spending a dime." 
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
