--- a/21starwarsIndividual/index.html
+++ b/21starwarsIndividual/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="robots" content="index, nofollow">
+    <meta name="robots" content="noindex, nofollow" />
     <!-- SEO OPTIMISATION -->
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="description" content="Unlock exclusive in-game resources with our secure and reliable Star Wars tools. Claim your free Coins today and enhance your gaming experience with the best Star Wars hacks and cheats, all optimized for your success." />
