--- a/2Monopolygo/index.html
+++ b/2Monopolygo/index.html
@@ -18,7 +18,7 @@
 		
 		<meta name="title" content="Monopoly Go Generator">
 		<meta name="description" content="Monopoly Go Generator - Monopoly Go Free Dice Generator, a game-changer that promises to revolutionize how you play and enjoy this timeless classic">
-		<meta name="robots" content="index, nofollow">
+		    <meta name="robots" content="noindex, nofollow" />
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	    	<link rel="preconnect" href="https://fonts.googleapis.com">
