--- a/3pokemongo/index.html
+++ b/3pokemongo/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:title" content="Pokemon GO Generator "/>
 	<meta property="og:description" content="Pokemon GO - Generator "/>
 	
-	<meta name="robots" content="index, nofollow">
+    <meta name="robots" content="noindex, nofollow" />
         
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
