--- a/4royalmatch/index.html
+++ b/4royalmatch/index.html
@@ -21,8 +21,9 @@
     <meta property="og:title" content="Royal Match - Hearts and Coins Generator" />
 
     <meta name="referrer" content="no-referrer">
-    <meta name="robots" content="index, nofollow">
+    <meta name="robots" content="noindex, nofollow" />
 
+    
     <style>
         .header_blue {
             background: #1565c0;
