--- a/5callofdutymw3/index.html
+++ b/5callofdutymw3/index.html
@@ -26,7 +26,7 @@
       property="og:description"
 content="Explore legitimate methods to earn free COD Points in Call of Duty and Call of Duty Mobile. Discover ways to acquire COD Points through in-game events, promotions, and official offers. Stay safe and avoid fraudulent generators with our trusted guide."    />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <title>
       [100% FREE] Call of Duty Free CP Coins | Coin Generator & Game Hack
