--- a/6brawl_stars/index.html
+++ b/6brawl_stars/index.html
@@ -36,7 +36,7 @@
       content="Discover how to generate gems for Brawl Stars and access Null's Brawl for online play and downloads."
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>[100% FREE] Brawl Stars Hack | Coin Generator & Game Hack</title>
 
     <link
