--- a/7valorantlp/index.html
+++ b/7valorantlp/index.html
@@ -34,7 +34,7 @@
 		<meta property="og:description" content="Find out how to legitimately earn free Valorant Points and gift cards for Valorant. Explore official promotions, events, and trusted methods for acquiring Valorant gift cards and codes without cost. Avoid scams and get the most value from your Valorant experience with our expert guide."/>
 
 
-    <meta name="robots" content="index, nofollow">
+    <meta name="robots" content="noindex, nofollow" />
 		<link rel="icon" type="image/png" href="favicon.ico">
 
 	    <title>[100% FREE] VALORANT MOBILE | Game Hack Coins Generator</title>
