--- a/8leagueoflegends/index.html
+++ b/8leagueoflegends/index.html
@@ -38,7 +38,7 @@
       content="Get free League of Legends accounts, skins, and RP. Download LoL for PC and discover ways to access free in-game rewards and items."
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
