--- a/9counterstrike/index.html
+++ b/9counterstrike/index.html
@@ -36,7 +36,7 @@
       content="Explore ways to get free CS:GO skins and play Counter-Strike games for free. Find the best sites for skin giveaways and sales, and download CS games for Windows 10."
     />
 
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <script src="https://cdn.tailwindcss.com"></script>
 
